[package]
name = "oximqtt-conf"
version = "0.3.5"
description = "Centralized configuration management system for OXIMQTT MQTT broker"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oximqtt-codec.workspace = true
oximqtt-net.workspace = true
oximqtt-utils.workspace = true
anyhow.workspace = true
chrono.workspace = true
config = { workspace = true, features = ["toml"] }
once_cell.workspace = true
serde.workspace = true
log.workspace = true
serde_json.workspace = true
ahash.workspace = true
clap.workspace = true
bytestring.workspace = true


