[package]
name = "oximqtt-utils"
version = "0.1.6"
description = "Essential utilities for OXIMQTT system operations."
repository = "https://github.com/zeaphoo/oximqtt/tree/master/oximqtt-utils"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
chrono = { workspace = true, features = ["clock"] }
serde_json.workspace = true
log.workspace = true
bytestring = { workspace = true, features = ["serde"] }
regex.workspace = true
once_cell.workspace = true

