[package]
name = "oximqtt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tls", "ws", "quic"]
tls = ["dep:rustls", "dep:tokio-rustls", "dep:x509-parser"]
ws = ["dep:tokio-tungstenite"]
quic = ["tls"]

[dependencies]
rust-box = { workspace = true, features = ["dequemap", "task-exec-queue", "task-exec-queue-rate"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "net", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
futures.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
bytes = { workspace = true, features = ["serde"] }
bytestring = { workspace = true, features = ["serde"] }
base64.workspace = true
bitflags.workspace = true
itertools.workspace = true
dashmap.workspace = true
ahash.workspace = true
chrono = { workspace = true, features = ["clock"] }
get-size2 = { workspace = true, features = ["derive"] }
leaky-bucket.workspace = true
governor.workspace = true
uuid = { workspace = true, features = ["v4"] }
systemstat.workspace = true
postcard.workspace = true
prost.workspace = true
rand.workspace = true
paste.workspace = true
url.workspace = true
config = { workspace = true, features = ["toml"] }
scopeguard.workspace = true
parking_lot.workspace = true
strum = { workspace = true, features = ["derive"] }
jsonwebtoken.workspace = true
itoa.workspace = true
toml.workspace = true
regex.workspace = true
clap.workspace = true
once_cell.workspace = true
nonzero_ext.workspace = true
socket2 = { workspace = true, features = ["all"] }
proxy-protocol.workspace = true
quinn.workspace = true
tokio-tungstenite = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, features = ["ring", "logging", "std", "tls12"], optional = true }

[dependencies.x509-parser]
version = "0.18.0"
optional = true

[dev-dependencies]
test-case = "3.2"
simple_logger.workspace = true

[build-dependencies]
chrono = { workspace = true, features = ["clock"] }
rustc_version = "0.4"
