[package]
name = "simple_quic_client"
version = "0.1.0"
edition.workspace = true

[dependencies]
oximqtt = { workspace = true, features = ["quic"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
simple_logger = { workspace = true }
log.workspace = true
quinn.workspace = true
futures.workspace = true
anyhow.workspace = true
bytestring.workspace = true
bytes.workspace = true
rustls.workspace = true